Allow parent to port children to new club upon joining new club